--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": {"SqliteConnection": "DataSource=Data\\AppDb.db"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
